@@ -1,0 +1,3 @@
+runtime:
+  requires:
+    ExtUtils::Builder::Planner: 0.007
